# stellar-goal-vault

./: .env.example  .env.keepalive  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  ARCHITECTURE_DIAGRAMS.md  CAMPAIGN_FORM_TESTING_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLES.md  DEPLOYMENT.md  EXPLAIN_LIKE_IM_FIVE.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_TESTS_SUMMARY.md  MULTI_TOKEN_DESIGN_DECISION.md  PROPERTY_TESTS_IMPLEMENTATION.md  PROPERTY_TESTS_VERIFICATION.md  README.md  RUNBOOK.md  SEARCH_FEATURE_DELIVERY.md  SECURITY.md  SECURITY_CHECKLIST.md  TODO.md  VALIDATION_IMPLEMENTATION.md  VALIDATION_SUMMARY.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  pr-body.md
contracts/: BASELINE_COSTS.md  BENCHMARKS.md  Cargo.toml  PROPERTY_TESTS.md  QUICKSTART.md
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/test/: test_multi_token_campaign.1.json  test_multi_token_refund.1.json  test_unaccepted_token.1.json
contracts/test_snapshots/test/tests/: test_admin_can_pause_and_unpause.1.json  test_admin_double_initialization.1.json  test_admin_initialization.1.json  test_admin_only_function_rejection.1.json  test_admin_only_function_success.1.json  test_admin_transfer.1.json  test_admin_transfer_to_same_address.1.json  test_approve_extension_applies_when_majority_reached.1.json  test_approve_extension_rejects_double_vote.1.json  test_cancel_campaign_already_claimed.1.json  test_cancel_campaign_twice.1.json  (+72 more)
(+201 files in other folders)
