[package]
name = "stellar-goal-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Feature flags
# ------------
# `testutils` – enables soroban-sdk's test helpers (mock ledger, StellarAssetClient,
#   Address::generate, etc.).  This feature MUST NOT be enabled for production/release
#   WASM builds; it is only activated during `cargo test` (via dev-dependencies) and
#   when explicitly requested with `--features testutils`.
[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
proptest = "1.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
